Clusters/mars-microk8s/apps/php-guestbook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php-guestbook-web
  name: php-guestbook-web
  namespace: php-guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-guestbook-web
  template:
    metadata:
      labels:
        app: php-guestbook-web
    spec:
      containers:
      - image: ghcr.io/jokota/php-guestbook-web:202208241654
        name: php-guestbook-web
